--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 
 <head>
     <title>ProgramaYa!</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <h1>asjndansk</h1>
+    
     <header>
         <div class="container">
             <p class="logo">E<span>V</span></p>
@@ -30,7 +30,9 @@
             <div class="texto">
 
                 <h2>Universidad <span class="color-acento"> Kuepa</span></h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit veritatis a autem sed dignissimos commodi, voluptas incidunt voluptatibus cum, quia neque nulla consequatur laborum accusamus, perspiciatis odio nemo minus vel!</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit veritatis a autem sed dignissimos
+                    commodi, voluptas incidunt voluptatibus cum, quia neque nulla consequatur laborum accusamus,
+                    perspiciatis odio nemo minus vel!</p>
             </div>
         </div>
     </section>
@@ -41,17 +43,23 @@
             <div class="programas">
                 <div class="carta">
                     <h3>Programador Front-end</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt vero corporis incidunt saepe qui commodi quasi neque veniam quam, aspernatur est beatae maxime animi sed reiciendis mollitia ducimus veritatis repellendus?</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt vero corporis incidunt saepe
+                        qui commodi quasi neque veniam quam, aspernatur est beatae maxime animi sed reiciendis mollitia
+                        ducimus veritatis repellendus?</p>
                     <button>+ Info</button>
                 </div>
                 <div class="carta">
                     <h3>Programador Full-Stack</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt vero corporis incidunt saepe qui commodi quasi neque veniam quam, aspernatur est beatae maxime animi sed reiciendis mollitia ducimus veritatis repellendus?</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt vero corporis incidunt saepe
+                        qui commodi quasi neque veniam quam, aspernatur est beatae maxime animi sed reiciendis mollitia
+                        ducimus veritatis repellendus?</p>
                     <button>+ Info</button>
                 </div>
                 <div class="carta">
                     <h3>Programador Python</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt vero corporis incidunt saepe qui commodi quasi neque veniam quam, aspernatur est beatae maxime animi sed reiciendis mollitia ducimus veritatis repellendus?</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt vero corporis incidunt saepe
+                        qui commodi quasi neque veniam quam, aspernatur est beatae maxime animi sed reiciendis mollitia
+                        ducimus veritatis repellendus?</p>
                     <button>+ Info</button>
                 </div>
             </div>
