--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
             <div class="texto">
 
                 <h2>Universidad <span class="color-acento"> Kuepa</span></h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit veritatis a autem sed dignissimos
+                <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit veritatis a autem sed dignissimos
                     commodi, voluptas incidunt voluptatibus cum, quia neque nulla consequatur laborum accusamus,
-                    perspiciatis odio nemo minus vel!</p>
+                    perspiciatis odio nemo minus vel!</p> -->
             </div>
         </div>
     </section>
