--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <meta charset="utf-8">
     <title>ProgramaYa!</title>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -20,7 +21,7 @@
     </header>
 
     <section id="hero">
-        <h1>I'm Emmanuel Villalva<br>This is my first website</h1>
+        <h1>I'm Emmanuel Villalva<br />This is my first website</h1>
         <button>Click here</button>
     </section>
 
@@ -43,23 +44,32 @@
             <div class="programas">
                 <div class="carta">
                     <h3>Programador Front-end</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt vero corporis incidunt saepe
-                        qui commodi quasi neque veniam quam, aspernatur est beatae maxime animi sed reiciendis mollitia
-                        ducimus veritatis repellendus?</p>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt
+                        vero corporis incidunt saepe qui commodi quasi neque veniam quam,
+                        aspernatur est beatae maxime animi sed reiciendis mollitia ducimus
+                        veritatis repellendus?
+                    </p>
                     <button>+ Info</button>
                 </div>
                 <div class="carta">
                     <h3>Programador Full-Stack</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt vero corporis incidunt saepe
-                        qui commodi quasi neque veniam quam, aspernatur est beatae maxime animi sed reiciendis mollitia
-                        ducimus veritatis repellendus?</p>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt
+                        vero corporis incidunt saepe qui commodi quasi neque veniam quam,
+                        aspernatur est beatae maxime animi sed reiciendis mollitia ducimus
+                        veritatis repellendus?
+                    </p>
                     <button>+ Info</button>
                 </div>
                 <div class="carta">
                     <h3>Programador Python</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt vero corporis incidunt saepe
-                        qui commodi quasi neque veniam quam, aspernatur est beatae maxime animi sed reiciendis mollitia
-                        ducimus veritatis repellendus?</p>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt
+                        vero corporis incidunt saepe qui commodi quasi neque veniam quam,
+                        aspernatur est beatae maxime animi sed reiciendis mollitia ducimus
+                        veritatis repellendus?
+                    </p>
                     <button>+ Info</button>
                 </div>
             </div>
