--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <h1>Este h1 lo cree en la rama main</h1>
     <header>
-        <h1>H1 de prueba para</h1>
+        <h1>H1 de prueba para branch work</h1>
         <div class="container">
             <p class="logo">E<span>V</span></p>
             <nav>
