--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <h1>Este h1 lo cree en la rama main</h1>
     <header>
         <h1>H1 de prueba para branch work</h1>
+        <h2>Segunda prueba para branc work</h2>
         <div class="container">
             <p class="logo">E<span>V</span></p>
             <nav>
